<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_home">Home</string>
    <string name="report">Reports</string>
    <string name="addBooking">Add</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>

    <string name="chat_user">User</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>